<resources>
    <string name="app_name">Job_Centre</string>
    <string name="welcome">Welcome!</string>
    <string name="registration">Registration</string>
    <string name="log_in">Log in</string>
    <string name="nothing">Nothing</string>
    <string name="surname">Surname</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="e_mail">E-mail</string>
    <string name="first_name">First name</string>
    <string name="middle_name">Middle name</string>
    <string name="login">Login</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="name">Login</string>
    <string name="button">Button</string>
    <string name="guest">Guest</string>
    <string name="repeat_the_password">Repeat the password</string>
    <string name="sex">Sex</string>
    <string name="positives">Positives</string>
    <string name="education">Education</string>
    <string name="negatives">Negatives</string>
    <string name="save">Save</string>
    <string name="sign_up">Sign up</string>
    <string name="type_of_desired_employment">Type Of Desired Employment</string>
    <string name="desired_work_location_area">Desired Work Location Area</string>
    <string name="speciality">Speciality</string>
    <string name="work_experience">Work Experience</string>
    <string name="skills">Skills</string>
    <string name="desired_salary">Desired Salary</string>
    <string name="textview">TextView</string>
    <string name="vacancies">Vacancies</string>
    <string name="profile">Profile</string>
    <string name="favorites">Favorites</string>
    <string name="responses">Responses</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_is_fragment_vacancies">This is fragment Vacancies</string>
    <string name="this_is_profile">This is Profile</string>
</resources>